--- a/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-m1-plus2.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-m1-plus2.dts
@@ -61,6 +61,7 @@
 
 	aliases {
 		serial0 = &uart0;
+		serial3 = &uart3;
 		ethernet0 = &emac;
 	};
 
@@ -145,6 +146,17 @@
         reset-gpios = <&r_pio 0 7 GPIO_ACTIVE_LOW>; /* PL7 */
         post-power-on-delay-ms = <200>;
     };
+
+	rfkill_bt {
+		compatible = "rfkill-gpio";
+		pinctrl-names = "default";
+		pinctrl-0 = <&bt_pwr_pin>;
+		reset-gpios = <&pio 6 13 GPIO_ACTIVE_HIGH>; /* PG13 */
+		clocks = <&osc32k>;
+		clock-frequency = <32768>;
+		rfkill-name = "sunxi-bt";
+		rfkill-type = "bluetooth";
+	};
 };
 
 &cpu0 {
@@ -329,9 +341,12 @@
 		pins = "PA10";
 		function = "gpio_out";
 	};
-
 	gmac_power_pin_nanopi: gmac_power_pin@0 {
 		pins = "PD6";
+		function = "gpio_out";
+	};
+	bt_pwr_pin: bt_pwr_pin@0 {
+		pins = "PG13";
 		function = "gpio_out";
 	};
 };
@@ -383,6 +398,12 @@
 	pinctrl-names = "default";
 	pinctrl-0 = <&uart2_pins>;
 	status = "disabled";
+};
+
+&uart3 {
+	pinctrl-names = "default";
+	pinctrl-0 = <&uart3_pins>, <&uart3_rts_cts_pins>;
+	status = "okay";
 };
 
 &usb_otg {
