ARM: dts: sun8i-h3-nanopi: Make /dev/ttySx in order

--- a/arch/arm/boot/dts/sun8i-h3-nanopi.dtsi
+++ b/arch/arm/boot/dts/sun8i-h3-nanopi.dtsi
@@ -53,6 +53,9 @@
 / {
 	aliases {
 		serial0 = &uart0;
+		serial1 = &uart1;
+		serial2 = &uart2;
+		serial3 = &uart3;
 		lcd0 = &lcd0;
 		ethernet0 = &emac;
 	};
