--- a/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-m1-plus2.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-m1-plus2.dts
@@ -420,6 +420,10 @@
 
 &i2c0 {
     status = "okay";
+    rtc@68 {
+        compatible = "dallas,ds1307";
+        reg = <0x68>;
+    };
 };
 
 &i2c1 {
