--- a/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-neo2.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-neo2.dts
@@ -337,6 +337,10 @@
 
 &i2c0 {
     status = "okay";
+    rtc@68 {
+            compatible = "dallas,ds1307";
+            reg = <0x68>;
+    };
 };
 
 &i2c1 {
