--- a/arch/arm/boot/dts/sun8i-h3-nanopi-m1-plus.dts
+++ b/arch/arm/boot/dts/sun8i-h3-nanopi-m1-plus.dts
@@ -65,6 +65,17 @@
         enable-active-high;
         gpio = <&pio 3 6 GPIO_ACTIVE_HIGH>;
     };
+
+    rfkill_bt {
+        compatible = "rfkill-gpio";
+        pinctrl-names = "default";
+        pinctrl-0 = <&bt_pwr_pin>;
+        reset-gpios = <&pio 6 13 GPIO_ACTIVE_HIGH>; /* PG13 */
+        clocks = <&osc32k>;
+        clock-frequency = <32768>;
+        rfkill-name = "sunxi-bt";
+        rfkill-type = "bluetooth";
+    };
 };
 
 &pio {
@@ -77,6 +88,10 @@
 &r_pio {
     wifi_en_npi: wifi_en_pin {
         pins = "PL7";
+        function = "gpio_out";
+    };
+    bt_pwr_pin: bt_pwr_pin@0 {
+        pins = "PG13";
         function = "gpio_out";
     };
 };
@@ -147,5 +162,11 @@
 };
 
 &spi0 {
+    status = "okay";
+};
+
+&uart3 {
+    pinctrl-names = "default";
+    pinctrl-0 = <&uart3_pins>, <&uart3_rts_cts_pins>;
     status = "okay";
 };
