ARM: dts: sun8i-h3-nanopi: Enable internal codec

--- a/arch/arm/boot/dts/sun8i-h3-nanopi.dtsi
+++ b/arch/arm/boot/dts/sun8i-h3-nanopi.dtsi
@@ -269,3 +269,11 @@
 &emac {
 	local-mac-address = [ 00 00 00 00 00 00 ];	
 };
+
+&codec {
+	allwinner,audio-routing =
+		"Line Out", "LINEOUT",
+		"MIC1", "Mic",
+		"Mic",  "MBIAS";
+	status = "okay";
+};
