arm64: dts: sun50i-h5-nanopi: Add pwm0 config

--- a/arch/arm/boot/dts/sunxi-h3-h5.dtsi
+++ b/arch/arm/boot/dts/sunxi-h3-h5.dtsi
@@ -473,6 +473,11 @@
 				pins = "PA15", "PA16";
 				function = "uart3";
 			};
+
+			pwm0_pins: pwm0 {
+				pins = "PA5";
+				function = "pwm0";
+			};
 		};
 
 		ths: ths@01c25000 {
