ARM: dts: nanopi-duo: Support spidev0

--- a/arch/arm/boot/dts/sun8i-h2-plus-nanopi-duo.dts
+++ b/arch/arm/boot/dts/sun8i-h2-plus-nanopi-duo.dts
@@ -117,3 +117,12 @@
         function = "gpio_out";
     };
 };
+
+&spi0 {
+    status = "okay";
+    spidev0: spi@0 {
+        compatible = "nanopi,spidev";
+        reg = <0>;
+        spi-max-frequency = <10000000>;
+    };
+};
