--- a/arch/arm/boot/dts/sun8i-h3-nanopi-neo-core.dts
+++ b/arch/arm/boot/dts/sun8i-h3-nanopi-neo-core.dts
@@ -64,7 +64,25 @@
 
 &spi0 {
     status = "okay";
-    spidev0: spi@0 {
+    spi-flash@0 {
+        #address-cells = <1>;
+        #size-cells = <1>;
+        compatible = "mxicy,mx25l1606e";
+        reg = <0>;
+        spi-max-frequency = <50000000>;
+        mode = <0>;
+
+        partition@0 {
+            reg = <0x0 0x200000>;
+            label = "spi-flash";
+        };
+    };
+
+};
+
+&spi1 {
+    status = "okay";
+    spidev1: spi@1 {
         compatible = "nanopi,spidev";
         reg = <0>;
         spi-max-frequency = <10000000>;
