--- a/arch/arm/boot/dts/sun8i-h3-nanopi-neo-core.dts
+++ b/arch/arm/boot/dts/sun8i-h3-nanopi-neo-core.dts
@@ -62,6 +62,11 @@
         };
 };
 
+&i2c1 {
+    /* no I2C1 for I2S0 */
+    status = "okay";
+};
+
 &spi0 {
     status = "okay";
     spi-flash@0 {
@@ -106,3 +111,7 @@
     bias-pull-up;
 };
 
+&i2s0 {
+    sound-dai = <&pcm5102a>;
+    status = "disabled";
+};
