--- a/arch/arm/boot/dts/sun8i-h3-nanopi-neo.dts
+++ b/arch/arm/boot/dts/sun8i-h3-nanopi-neo.dts
@@ -62,6 +62,11 @@
         };
 };
 
+&i2c1 {
+    /* no I2C1 for I2S0 */
+    status = "okay";
+};
+
 &spi0 {
     status = "okay";
     spidev0: spi@0 {
@@ -69,4 +74,9 @@
         reg = <0>;
         spi-max-frequency = <10000000>;
     };
+};
+
+&i2s0 {
+    sound-dai = <&pcm5102a>;
+    status = "disabled";
 };
