--- a/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-neo-core2.dts
+++ b/arch/arm64/boot/dts/allwinner/sun50i-h5-nanopi-neo-core2.dts
@@ -74,6 +74,8 @@
 		mmc2 = &mmc2;
 		ethernet0 = &emac;
 		lcd0 = &lcd0;
+		i2s0 = &i2s0;
+		pcm5102a = &pcm5102a;
 	};
 
 	chosen {
@@ -149,6 +151,12 @@
 		states = <1100000 0x0
 			  1100000 0x1>;
 	};
+
+	pcm5102a: pcm5102a-codec {
+        #sound-dai-cells = <0>;
+        compatible = "ti,pcm5102a";
+        status = "disabled";
+    };
 };
 
 &cpu0 {
@@ -395,6 +403,7 @@
 };
 
 &i2c1 {
+    /* no I2C1 for I2S0 */
     status = "okay";
 };
 
@@ -415,4 +424,9 @@
     pinctrl-names = "default";
     pinctrl-0 = <&pwm0_pins>;
     status = "disabled";
+};
+
+&i2s0 {
+	sound-dai = <&pcm5102a>;
+	status = "disabled";
 };
